--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 framework = arduino
 lib_deps = 
     arduino-libraries/ArduinoIoTCloud
+    ayushsharma82/ElegantOTA
     CloudSerial
 debug_build_flags= 
     -D VERBOSE
