Fix the color library and add it to dependency

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ lib_deps =
     arduino-libraries/ArduinoIoTCloud
     ayushsharma82/ElegantOTA
     CloudSerial
+    Color
 debug_build_flags= 
     -D VERBOSE
 build_flags = 
