improve platform.ini
instead of [common], use [env] which simplfies a lot things, it looks a lot cleaner now.

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[common]
+[env]
 framework = arduino
 lib_deps = 
     arduino-libraries/ArduinoIoTCloud
@@ -24,16 +24,9 @@ monitor_speed = 115200
 [env:esp32]
 platform = espressif32
 board = esp32dev
-framework = arduino
-lib_deps = 
-    ${common.lib_deps}
 build_flags =
     -UOTA_ENABLED ; Disable OTA, as Arduino IoT Cloud fucks up with it for some reason.
     ; if it still doesn't build, go to "AIoTC_Config.h" on src of the ARDUINO CLOUD Library and comment out "#define OTA_ENABLED (1)"
-    ${common.build_flags}
-debug_build_flags=
-    ${common.debug_build_flags}
-monitor_speed = 115200
 monitor_filters = 
     time
     log2file
@@ -43,14 +36,12 @@ lib_ignore = WiFiNINA
 [env:esp8266]
 platform = espressif8266
 board = nodemcuv2
-framework = arduino
 monitor_speed = 115200
 monitor_filters = 
     time
     log2file
     esp8266_exception_decoder
-lib_deps = 
-    ${common.lib_deps}
+lib_deps =
+    ${env.lib_deps}
+    vshymanskyy/Preferences
 lib_ignore = WiFiNINA
-debug_build_flags=
-    ${common.debug_build_flags}
