directly upload OTA from platformIO
this is thanks to adding ArduinoOTA from commit #d813b39

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ build_flags =
     -D INFO
 monitor_speed = 115200
 
-[env:esp32]
+[esp32]
 platform = espressif32
 board = esp32dev
 build_flags =
@@ -31,6 +31,13 @@ monitor_filters =
     time
     log2file
     esp32_exception_decoder
+lib_ignore = WiFiNINA
+
+[env:esp32USB]
+platform = ${esp32.platform}
+board = ${esp32.board}
+build_flags = ${esp32.build_flags}
+monitor_filters = ${esp32.monitor_filters}
 lib_ignore = WiFiNINA
 
 [env:esp8266]
@@ -45,3 +52,12 @@ lib_deps =
     ${env.lib_deps}
     vshymanskyy/Preferences
 lib_ignore = WiFiNINA
+
+
+[env:esp32OTA]
+platform = ${esp32.platform}
+board = ${esp32.board}
+build_flags = ${esp32.build_flags}
+lib_ignore = ${esp32.lib_ignore}
+upload_protocol = espota
+upload_port = 192.168.0.30
