Setup wokwi simulation
with this, simulation can be ran!

--- a/platformio.ini
+++ b/platformio.ini
@@ -61,3 +61,12 @@ build_flags = ${esp32.build_flags}
 lib_ignore = ${esp32.lib_ignore}
 upload_protocol = espota
 upload_port = 192.168.0.30
+
+
+[env:esp32SIM]
+platform = ${esp32.platform}
+board = ${esp32.board}
+build_flags = 
+    ${esp32.build_flags},
+    -D SIMULATION
+lib_ignore = ${esp32.lib_ignore}
