--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,13 @@
 .vscode/ipch
 /logs
 
+# Clion default ignored files
+/shelf/
+/workspace.xml
+/httpRequests/
+/dataSources/
+/dataSources.local.xml
+
 # Costom
+/.idea
 arduino_secrets.h
