add basic homespan

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ framework = arduino
 lib_deps = 
     arduino-libraries/ArduinoIoTCloud
     ayushsharma82/ElegantOTA
+    homespan/HomeSpan
     kytpbs/SmoothPin
     CloudSerial
     Color
