--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,10 @@ lib_deps =
     kytpbs/SmoothPin
     CloudSerial
     Color
-debug_build_flags= 
+    ArduinoOTA
+    WebServer
+    WiFi
+debug_build_flags = 
     -D VERBOSE
 build_flags = 
     -D INFO
@@ -27,14 +30,15 @@ board_build.partitions = max_app_4MB.csv
 [esp32]
 platform = espressif32
 board = esp32dev
-build_flags =
-    -UOTA_ENABLED ; Disable OTA, as Arduino IoT Cloud fucks up with it for some reason.
-    ; if it still doesn't build, go to "AIoTC_Config.h" on src of the ARDUINO CLOUD Library and comment out "#define OTA_ENABLED (1)"
+build_flags = 
+    -UOTA_ENABLED
 monitor_filters = 
     time
     log2file
     esp32_exception_decoder
-lib_ignore = WiFiNINA
+lib_ignore = 
+    WiFiNINA
+    WIFI101
 
 [env:esp32USB]
 platform = ${esp32.platform}
@@ -64,7 +68,6 @@ build_flags = ${esp32.build_flags}
 lib_ignore = ${esp32.lib_ignore}
 upload_protocol = espota
 upload_port = 192.168.0.2
-
 
 [env:esp32SIM]
 platform = ${esp32.platform}
