increase flash size by decreasing spiffs size

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,7 @@ debug_build_flags=
 build_flags = 
     -D INFO
 monitor_speed = 115200
+board_build.partitions = max_app_4MB.csv
 
 [esp32]
 platform = espressif32
